# cve_list_pipeline

./: .gitignore  README.md  main.py  pyproject.toml
.scannerwork/: report-task.txt
assets/: last_commit.txt
src/: feed_mongo.py  search_and_copy.py
