[project]
name = "cve-list-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "python-json-logger>=3.2.1",
    "requests>=2.32.3",
]
